Added the algorithms to find the mebedding dimension and lag time step

--- a/CCM/Ccode/Makefile
+++ b/CCM/Ccode/Makefile
@@ -4,5 +4,8 @@ CFLAGS=.
 all: ccm.o 
 	$(CC) -o ccm ccm.o 
 
+verify: CCM_verify.o
+	$(CC) -o CCM_verify CCM_verify.o
+
 clean:
-	$(RM) ccm ccm.o
+	$(RM) ccm ccm.o CCM_verify CCM_verify.o
